--- a/cuidarte-web/package.json
+++ b/cuidarte-web/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "framer-motion": "^12.27.1",
+    "lucide-react": "^0.563.0",
     "next": "15.4.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
